<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ProjectVincentXavier="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person"
        android:orderInCategory="100"
        android:title="@string/profile"
        ProjectVincentXavier:showAsAction="never"/>

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        ProjectVincentXavier:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_topics"
        android:icon="@drawable/ic_announcement"
        android:orderInCategory="100"
        android:title="@string/Topics"
        ProjectVincentXavier:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_gear"
        android:orderInCategory="100"
        android:title="@string/Settings"
        ProjectVincentXavier:showAsAction="never"/>
</menu>